--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "projetoexpressmongodb",
   "version": "1.0.0",
   "description": "Projeto para aprendizado do mongodb e express",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "nodemon --exec babel-node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
